<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="submit_registration">Submit Registration</string>
    <string name="already_registered"><![CDATA[Already Registered? ->]]></string>
    <string name="login_here">Login Here</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="adam_s_to_do_list_n_registration">Adam\'s To Do List \n Registration</string>
    <string name="adam_s_to_do_list_n_login">Adam\'s To Do List \n Login</string>
    <string name="submit_login">Submit Login</string>
    <string name="new_user"><![CDATA[New User? ->]]></string>
    <string name="register_here">Register Here</string>
    <string name="adam_s_n_to_do_list_home">Your TO DOs:</string>
    <string name="name_of_new_task">Name of New Task</string>
    <string name="description_of_new_task">Description of New Task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="status">Status:</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="incomplete">Incomplete</string>
    <string name="adam_s_n_to_do_list">ADAM\'S\n TO DO LIST:</string>
    <string name="go_go_do_do">Go-Go Do-Do</string>
    <string name="your_2020_todo_list_app">Your 2020 ToDo List App</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="go_go_do_do_nregistration">Go-Go Do-Do\nRegistration</string>
    <string name="go_go_do_do_login">Go-Go Do-Do\nLogin</string>
    <string name="add">Add</string>
    <string name="go_do_it">Go-do-it</string>
    <string name="go_do_it_list">Go-do-it List</string>
    <string name="ready_to_go_do_it">Ready to Go-do-it?</string>
    <string name="go_do_it_login">Go-do-it Login</string>
    <string name="app_logo">App logo</string>
    <string name="go_do_it_registration">Go-do-it Registration</string>
</resources>