<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/adam_s_to_do_list_n_login"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit_login"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_user"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_here"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp" />

    </LinearLayout>

</RelativeLayout>