<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="5dp"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:layout_margin="2dp"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_go_do_do_nregistration"
            android:textStyle="italic"
            android:textSize="35sp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/edit_text_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email_address"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@color/colorWhite"
            />

        <EditText
            android:id="@+id/edit_text_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@color/colorWhite"
            />

        <EditText
            android:id="@+id/edit_text_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_your_password"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@color/colorWhite"
            />

        <Button
            android:id="@+id/button_register_submit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:padding="13dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"
            android:text="@string/register" />



    </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/button_register_to_login"
            android:textSize="15sp"
            android:layout_marginLeft="25dp"
            android:text="@string/login"
            android:padding="13dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorWhite"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp" />

    </LinearLayout>

</RelativeLayout>