<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_new_task"
        android:padding="15dp"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_text_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@color/colorWhite"
            android:hint="@string/name_of_new_task"/>


        <EditText
            android:id="@+id/edit_text_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@color/colorWhite"
            android:hint="@string/description_of_new_task"/>

    <Button
        android:id="@+id/button_add_task_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"/>
    </LinearLayout>
</RelativeLayout>