<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    app:cardElevation="30dp"
    app:cardCornerRadius="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/colorPrimary"
    android:padding="15dp">

    <Button
        android:id="@+id/button_mark_task_complete"
        android:layout_width="45dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_baseline_done_outline_24"
        android:layout_marginStart="2dp" />

    <ImageView
        android:id="@+id/image_view_completed_task"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        android:background="@drawable/ic_baseline_done_24" />

    <Button
        android:id="@+id/button_delete_task"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_baseline_cancel_24"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/text_view_row_task_name"
        android:layout_width="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/task_name"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_row_task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_row_task_name"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:textStyle="italic"
        android:textSize="17sp"
        android:text="@string/description"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/status"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/incomplete"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

</RelativeLayout>
</androidx.cardview.widget.CardView>